--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,6 +1,6 @@
 <footer class="page__footer">
 
-    <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+    <a class="btn_up" href="#hero" title="Home"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
     </a>
 
     <div class="footer_info_container">
