--- a/_src/assets/scss/layouts/_section1.scss
+++ b/_src/assets/scss/layouts/_section1.scss
@@ -83,9 +83,7 @@
             line-height: 1.5;
             padding-top: 30px;
         }
-
         
-
     }
 
 
@@ -106,6 +104,11 @@
         border: 2px solid $colorOrange;
         border-radius: 25px;
         text-align: center;
+
+        &:hover {
+            background-color: $colorOrange;
+            color: $colorWhite;
+        }
 
         @include forTablet {
             width: 91px;
