--- a/_src/assets/scss/layouts/_footer.scss
+++ b/_src/assets/scss/layouts/_footer.scss
@@ -22,6 +22,34 @@
         padding-top: 10px;
         margin-left: auto;
         margin-right: auto;
+
+        &:hover {
+            animation-name: heartBeat;
+            animation-duration: 1.3s;
+            animation-timing-function: ease-in-out;
+
+            @keyframes heartBeat {
+                0% {
+                    transform: scale(1);
+                }
+
+                14% {
+                    transform: scale(1.3);
+                }
+
+                28% {
+                    transform: scale(1);
+                }
+
+                42% {
+                    transform: scale(1.3);
+                }
+
+                70% {
+                    transform: scale(1);
+                }
+            }
+        }
     }
 
 
