--- a/_src/assets/scss/layouts/_footer.scss
+++ b/_src/assets/scss/layouts/_footer.scss
@@ -9,7 +9,6 @@
         height: 240px;
     }
 
-
     & .btn_up {
         position: relative;
         width: 45px;
@@ -60,10 +59,11 @@
         text-align: center;
 
 
+
         @include forTablet {
             display: flex;
             flex-direction: row;
-
+            justify-content: center;
         }
 
         @include forPc {
@@ -83,7 +83,6 @@
                 margin-left: 30px;
                 width: 210px;
             }
-
         }
 
         & .rrss_container {
@@ -96,7 +95,6 @@
                 width: 210px;
                 margin-left: 30px;
             }
-
         }
 
         .footer_links {
@@ -104,7 +102,7 @@
             color: $colorText1;
             text-transform: uppercase;
             font-family: $fontStyle2;
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: normal;
             font-stretch: normal;
             font-style: normal;
@@ -122,7 +120,7 @@
         padding-top: 30px;
         text-transform: lowercase;
         font-family: $fontStyle2;
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: normal;
         font-stretch: normal;
         font-style: normal;
@@ -137,10 +135,7 @@
             margin-left: 39px;
             width: 210px;
             height: 53px;
-            font-size: 14px;
+            font-size: 0.875rem;
         }
-
     }
-
-
 }
