--- a/_src/assets/scss/layouts/_hero.scss
+++ b/_src/assets/scss/layouts/_hero.scss
@@ -11,7 +11,6 @@
         height: 768px;
     }
 
-
 }
 
 .btnBurguer_container {
@@ -25,11 +24,9 @@
     justify-content: center;
 
 
-
     & btn_burguer {
         width: 16px;
         height: 14px;
-
     }
 }
 
@@ -44,7 +41,7 @@
         color: $colorText1;
         font-family: $fontStyle1;
         text-transform: uppercase;
-        font-size: 42px;
+        font-size: 2.625rem;
         line-height: 55px;
         text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
         font-weight: bold;
@@ -57,27 +54,27 @@
 
         @include forTablet {
             padding-top: 384px;
-            font-size: 80px;
+            font-size: 5rem;
             line-height: 1.33;
         }
 
         @include forPc {
-            font-size: 100px;
+            font-size: 6.25rem;
             line-height: 1.32;
         }
-
     }
+
 
     & p {
         color: $colorText1;
         font-family: $fontStyle2;
-        font-size: 16px;
+        font-size: 1rem;
         position: relative;
         padding-top: 10px;
 
         @include forTablet {
             padding-top: 20px;
-            font-size: 24px;
+            font-size: 1.5rem;
         }
 
         @include forPc {
@@ -101,9 +98,5 @@
         @include forTablet {
             margin-top: 30px;
         }
-
-
     }
-
-
 }
