--- a/_src/assets/scss/layouts/_hero.scss
+++ b/_src/assets/scss/layouts/_hero.scss
@@ -1,7 +1,7 @@
 .page__hero {
     height: 100vh;
     width: 100vw;
-    background: url(/assets/images/cover.jpg) no-repeat;
+    background: url(../images/cover.jpg) no-repeat;
     background-position: top;
     background-size: cover;
     background-blend-mode: multiply;
