--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -14,7 +14,7 @@ html {
 .page__hero {
   height: 100vh;
   width: 100vw;
-  background: url(/assets/images/cover.jpg) no-repeat;
+  background: url(../images/cover.jpg) no-repeat;
   background-position: top;
   background-size: cover;
   background-blend-mode: multiply;
